霧玻璃登入

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="formBox">
             <div class="formContainer">
                 <div class="topHeader">
-                    <h1>Log in</h1>
+                    <h1>Log In</h1>
                 </div>
                 <!-- Login Form -->
                 <form action="">
